--- a/styles.css
+++ b/styles.css
@@ -199,7 +199,7 @@ h1.ready-to-scan0 {
 .nfc-icon {
     width: 100px;
     height: 100px;
-    margin: 30px auto;
+    margin: 5px auto 20px;
     position: relative;
 }
 
