--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,8 @@ body {
 }
 
 h1 {
-    font-size: 24px;
+    font-size: 31px;
+    /*24px*/
     margin: 30px 0;
     text-align: center;
 }
@@ -22,6 +23,7 @@ h2 {
     font-size: 20px;
     margin: 10px 0;
     text-align: center;
+    font-weight: medium;
 }
 
 p {
@@ -77,7 +79,7 @@ p {
     width: 100%;
     padding: 10px;
     border: 1px solid #ddd;
-    border-radius: 8px;
+    /*border-radius: 8px;*/
     height: 45px;
     font-size: 16px;
     box-sizing: border-box;
@@ -91,7 +93,7 @@ p {
     background-color: #0A2A3D;
     color: white;
     border: none;
-    border-radius: 8px;
+    /*border-radius: 8px;*/
     cursor: pointer;
     width: auto;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
@@ -116,10 +118,7 @@ p {
     background-color: #d0d0d0;
 }
 
-/* Welcome Page Styles */
-h1.ready-to-scan0 {
-    margin-top: 5px;
-}
+
 
 .button-group {
     display: flex;
@@ -142,7 +141,7 @@ h1.ready-to-scan0 {
     width: 100%;
     text-align: left;
     padding: 15px;
-    font-size: 16px;
+    font-size: 20px;
     margin: 0;
     display: flex;
     align-items: center;
@@ -187,7 +186,7 @@ h1.ready-to-scan0 {
 #scanComplete {
     padding: 10px;
     margin: 10px 0;
-    border-radius: 4px;
+    /*border-radius: 4px;*/
     font-size: 22px;
 }
 
@@ -264,16 +263,18 @@ h1.ready-to-scan0 {
     object-fit: contain;
 }
 
-.scan-complete img,
+.scan-complete img {
+    width: 80%;
+    object-fit: contain;
+    display: block;
+    margin: 30px auto;
+}
+
 .ready-to-scan img {
     width: 80%;
     object-fit: contain;
     display: block;
-    margin: 0 auto;
-}
-
-.ready-to-scan img {
-    width: 50%;
+    margin: 30px auto;
 }
 
 /* Instructions Content */
@@ -373,9 +374,9 @@ h1.ready-to-scan0 {
     width: 100%;
     height: auto;
     object-fit: cover;
-    border-radius: 8px;
+    /*border-radius: 8px;*/
     display: block;
-    border: 1px solid #ddd;
+    /*border: 1px solid #ddd;*/
     box-sizing: border-box;
 }
 
@@ -477,7 +478,7 @@ body:not(.at-welcome-page) .welcome-top-toolbar {
 /* Config Container Styles */
 .config-container {
     background-color: #f0f0f0;
-    border-radius: 8px;
+    /*border-radius: 8px;*/
     padding: 5px;
     margin: 20px 0;
     height: 3cm;
@@ -641,7 +642,7 @@ body:not(.at-welcome-page) .welcome-top-toolbar {
 }
 
 .step-label {
-    font-size: 11px;
+    font-size: 13px;
     color: #666;
 }
 
@@ -722,7 +723,7 @@ body:not(.at-welcome-page) .welcome-top-toolbar {
 .value-display {
     background-color: #f5f5f5;
     padding: 12px 15px;
-    border-radius: 8px;
+    /*border-radius: 8px;*/
     border: 1px solid #ddd;
     font-size: 16px;
     height: 21px;
@@ -758,7 +759,7 @@ body:not(.at-welcome-page) .welcome-top-toolbar {
     margin-bottom: 20px;
     padding: 15px;
     border: 1px solid #ddd;
-    border-radius: 8px;
+    /*border-radius: 8px;*/
     display: flex;
     align-items: center;
 }
@@ -834,7 +835,7 @@ body:not(.at-welcome-page) .welcome-top-toolbar {
     text-align: left;
     padding: 1px;
     margin: 10px 0;
-    border-radius: 6px;
+    /*border-radius: 6px;*/
     border: 1px solid transparent;
 }
 
@@ -862,7 +863,7 @@ body:not(.at-welcome-page) .welcome-top-toolbar {
 
 .reference-input-row input {
     flex: 1;
-    border-radius: 8px 0 0 8px;
+    /*border-radius: 8px 0 0 8px;*/
     margin-right: 2px;
 }
 
@@ -890,7 +891,7 @@ body:not(.at-welcome-page) .welcome-top-toolbar {
 /* Info container */
 .info-container {
     background-color: #f5f5f5;
-    border-radius: 8px;
+    /*border-radius: 8px;*/
     padding: 12px;
     margin: 5px 0;
 }
@@ -926,7 +927,7 @@ body:not(.at-welcome-page) .welcome-top-toolbar {
     color: #000000;
     background-color: rgba(255, 56, 96, 0.1);
     border: 1px solid #ff3860;
-    border-radius: 4px;
+    /*border-radius: 4px;*/
     padding: 8px 12px;
     margin-bottom: 15px;
     font-size: 14px;
@@ -938,7 +939,7 @@ body:not(.at-welcome-page) .welcome-top-toolbar {
     background-color: #FF9800;
     color: white;
     border: none;
-    border-radius: 4px;
+    /*border-radius: 4px;*/
     padding: 8px 12px;
     margin-top: 15px;
     cursor: pointer;
@@ -976,7 +977,7 @@ body:not(.at-welcome-page) .welcome-top-toolbar {
 #calibrated-page .success-icon,
 #maintenance-complete-page .success-icon {
     text-align: center;
-    margin: 60px auto;
+    margin: 40px auto;
 }
 
 #calibrated-page .success-icon i,
@@ -988,12 +989,14 @@ body:not(.at-welcome-page) .welcome-top-toolbar {
 #calibrated-page h1,
 #maintenance-complete-page h1 {
     text-align: center;
-    width: 70%;
+    width: 80%;
     margin-left: auto;
     margin-right: auto;
-    line-height: 1.3;
+    /*line-height: 1.3;*/
     margin-top: 100px;
     padding-top: 15px;
+    font-size: 28px;
+    font-weight: medium;
 }
 
 /* Custom interval styling */
@@ -1023,7 +1026,7 @@ body:not(.at-welcome-page) .welcome-top-toolbar {
 
 /* Due date styling */
 .due-date-container {
-    border-radius: 8px;
+    /*border-radius: 8px;*/
     padding: 15px;
     margin: 20px 0;
     text-align: center;
@@ -1112,7 +1115,7 @@ body:not(.at-welcome-page) .welcome-top-toolbar {
     width: 100%;
     padding: 12px;
     border: 1px solid #ddd;
-    border-radius: 4px;
+    /*border-radius: 4px;*/
     font-size: 16px;
     margin-bottom: 10px;
 }
@@ -1133,7 +1136,7 @@ body:not(.at-welcome-page) .welcome-top-toolbar {
 .filter-group select {
     padding: 8px;
     border: 1px solid #ddd;
-    border-radius: 4px;
+    /*border-radius: 4px;*/
 }
 
 .results-count {
@@ -1151,7 +1154,7 @@ body:not(.at-welcome-page) .welcome-top-toolbar {
 .result-item {
     padding: 15px;
     border: 1px solid #ddd;
-    border-radius: 8px;
+    /*border-radius: 8px;*/
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
     transition: transform 0.2s, box-shadow 0.2s;
@@ -1186,7 +1189,7 @@ body:not(.at-welcome-page) .welcome-top-toolbar {
 .result-type {
     padding: 2px 6px;
     background-color: #f0f0f0;
-    border-radius: 4px;
+    /*border-radius: 4px;*/
 }
 
 /* Installation Guide Styles */
@@ -1214,7 +1217,7 @@ body:not(.at-welcome-page) .welcome-top-toolbar {
 .guide-image img {
     max-width: 100%;
     border: 1px solid #eee;
-    border-radius: 4px;
+    /*border-radius: 4px;*/
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
@@ -1253,7 +1256,7 @@ h1+h1 {
 @media screen and (min-width: 600px) {
     body {
         border: 1px solid #ddd;
-        border-radius: 16px 16px 0 0;
+        /*border-radius: 16px 16px 0 0;*/
         box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
         height: calc(100vh - 40px);
         /*overflow-y: auto;*/
@@ -1276,7 +1279,7 @@ h1+h1 {
         right: 0;
         bottom: 0;
         border: 1px solid #ddd;
-        border-radius: 16px 16px 0 0;
+        /*border-radius: 16px 16px 0 0;*/
         box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
         z-index: -1;
         /* Place behind content */
@@ -1348,10 +1351,10 @@ h1+h1 {
 
 /* Email validation error message */
 .email-validation-message {
-    color: #000000;
-    background-color: rgba(235, 235, 235, 0.5);
-    border: 1px solid #999999;
-    border-radius: 4px;
+    color: #ac0e0e;
+    /*background-color: rgba(235, 235, 235, 0.5);*/
+    border: none;
+    /*border-radius: 4px;*/
     padding: 8px 12px;
     margin-top: 5px;
     margin-bottom: 15px;
@@ -1372,7 +1375,7 @@ h1+h1 {
     background-color: #f0f0f0;
     color: #333;
     border: none;
-    border-radius: 8px;
+    /*border-radius: 8px;*/
     padding: 20px 15px;
     font-size: 18px;
     text-align: left;
@@ -1463,7 +1466,7 @@ input:checked+.toggle-slider:before {
     background-color: #f0f0f0;
     color: #333;
     border: none;
-    border-radius: 4px;
+    /*border-radius: 4px;*/
     padding: 8px 16px;
     font-size: 14px;
     cursor: pointer;
@@ -1528,5 +1531,29 @@ input:checked+.toggle-slider:before {
     overflow-y: auto;
 
     /* Ensure enough room for buttons at bottom */
-    padding-bottom: 120px;
+    /*padding-bottom: 120px;*/
+}
+
+.upward {
+    margin-top: -10px;
+
+}
+
+#welcome {
+    font-size: 39px;
+}
+
+.success {
+    font-size: 28px;
+    font-weight: medium;
+}
+
+#maintenance-1 {
+
+    font-weight: bold;
+}
+
+#maintenance-2 {
+    font-size: 13px;
+    font-style: italic;
 }
