--- a/styles.css
+++ b/styles.css
@@ -534,7 +534,7 @@ body:not(.at-welcome-page) .welcome-top-toolbar {
 
 #device_name,
 #device_name_2 {
-    margin: 0 0 5px 0;
+    margin: 5px 0 5px 0;
     text-align: left;
     padding-left: 13px;
 }
@@ -547,6 +547,10 @@ body:not(.at-welcome-page) .welcome-top-toolbar {
 #device_name_2 {
     margin: 0;
     font-size: 13px;
+}
+
+#connected-to-sensor {
+    font-size: 14px;
 }
 
 /* Button Positioning */
@@ -1526,6 +1530,18 @@ input:checked+.toggle-slider:before {
     background-color: white;
 }
 
+.log-event {
+    padding-bottom: 8px;
+    margin-bottom: 8px;
+    border-bottom: 2px solid #e0e0e0;
+}
+
+/* Remove border from the last event */
+.log-event:last-child {
+    border-bottom: none;
+    margin-bottom: 0;
+}
+
 #scan-page {
     /* Allow the page to scroll if content exceeds viewport */
     overflow-y: auto;
@@ -1550,10 +1566,10 @@ input:checked+.toggle-slider:before {
 
 #maintenance-1 {
 
-    font-weight: bold;
+    /*font-weight: bold;*/
 }
 
 #maintenance-2 {
-    font-size: 13px;
-    font-style: italic;
+    font-size: 16px;
+    /*font-style: italic;*/
 }
