--- a/styles.css
+++ b/styles.css
@@ -970,9 +970,7 @@ body:not(.at-welcome-page) .welcome-top-toolbar {
     color: #4CAF50;
 }
 
-#step-maintain .step-label {
-    color: #999;
-}
+
 
 #step-maintain .step-dot {
     background-color: #0A2A3D;
@@ -1534,6 +1532,7 @@ input:checked+.toggle-slider:before {
     padding-bottom: 8px;
     margin-bottom: 8px;
     border-bottom: 2px solid #e0e0e0;
+    line-height: 1.3;
 }
 
 /* Remove border from the last event */
